# pokemon-dev

./: readme.txt
dev_db/: test_db.txt
patch/729/res/: version.plist
pokemon/crash_platform/: README.md  analyer_server.py  defines.py  server.py  settings.py  tar_file.py  util.py
pokemon/crash_platform/breakpad/android/google_breakpad/: Android.mk  CMakeLists.txt
pokemon/deploy_dev/: mongodb.conf  redis_master.conf  redis_slave.conf  supervisord.conf
pokemon/release/: cn_config_csv.spec  deploy.sh  dev_patch.py  game_defines.py  game_open_date.py  game_server.py  gm_defines.py  gm_server.py  log_server.py  make_defines.py  monitor.py  new 1.txt  new_container.py  new_server.py  nsq_defines.py  payment_defines.py  payment_server.py  sdk.conf  serv.conf  server_proj.sublime-project  src  version.conf  version_en.conf  version_tw.conf
pokemon_server_tool/: account_disable.py  card_expried_recover.py  config_merge_server.py  cross_arena_battle_cards.py  get_union_info.py  gm_send_mail.py  read_from_mongodb.py  read_playrecord.py  rmb_top100.py  search_server_machine.py  search_server_machine.sh  send_mail.py  send_play_to_agent.py  service_forward.py  tar_log.py  test_iptables.txt  tongji.sh  union_set_intro_role_abandon.py
pokemon_server_tool/db/: __init__.py  client.py  defines.py  server.py
pokemon_server_tool/fabfile/: auto_open.py  auto_open_en.py  auto_open_kr.py  auto_open_no_svn.py  deploy_fabfile.py  env.py  fabfile.py  fabfile_merge.py  fabric.yaml  gen.py  group.py  jenkins_deploy_fabfile.py  jenkins_fabfile.py  new_game_defines.py  open_new_tag.py
(+3527 files in other folders)
